[gd_scene load_steps=15 format=3 uid="uid://dobxsyn3qk7d4"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ct7k3"]
[ext_resource type="Texture2D" uid="uid://dad714mgexqpp" path="res://sprites/elements/DESIGN REFERENCE/HOME MENU.png" id="2_p5scj"]
[ext_resource type="Texture2D" uid="uid://df4oixuey5s8q" path="res://sprites/elements/ELEMENTS/BUTTONS/B1.png" id="3_0pi5s"]
[ext_resource type="Texture2D" uid="uid://tfd8fgrjvojw" path="res://sprites/elements/ELEMENTS/BUTTONS/B2.png" id="4_usde6"]
[ext_resource type="Texture2D" uid="uid://dixb2aufg6u3i" path="res://sprites/elements/ELEMENTS/THE BAR_/MOVING THING.png" id="5_2go0f"]
[ext_resource type="Texture2D" uid="uid://c0nsikritkcdd" path="res://sprites/elements/ELEMENTS/THE BAR_/B4.png" id="5_fsgrf"]
[ext_resource type="AudioStream" uid="uid://cwgfi50lambkm" path="res://assets/MUSIC/default.mp3" id="7_1j4rt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_85atd"]
texture = ExtResource("3_0pi5s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7k0ou"]
texture = ExtResource("3_0pi5s")
modulate_color = Color(0.886262, 0.886261, 0.886262, 1)

[sub_resource type="Theme" id="Theme_fv18x"]
Button/styles/hover = SubResource("StyleBoxTexture_85atd")
Button/styles/normal = SubResource("StyleBoxTexture_7k0ou")
Button/styles/pressed = SubResource("StyleBoxTexture_7k0ou")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y0bmw"]
texture = ExtResource("4_usde6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xu111"]
texture = ExtResource("4_usde6")
modulate_color = Color(0.912289, 0.912289, 0.912289, 1)

[sub_resource type="Theme" id="Theme_u2g2u"]
Button/styles/hover = SubResource("StyleBoxTexture_y0bmw")
Button/styles/normal = SubResource("StyleBoxTexture_xu111")
Button/styles/pressed = SubResource("StyleBoxTexture_xu111")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1iue"]
bg_color = Color(0.863436, 5.31845e-06, 7.70092e-07, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ct7k3")

[node name="HomeMenu" type="Sprite2D" parent="."]
position = Vector2(579, 323.5)
scale = Vector2(1.01563, 1.03858)
texture = ExtResource("2_p5scj")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.423
anchor_top = 0.19
anchor_right = 0.563
anchor_bottom = 0.329
offset_left = 6.70398
offset_top = -2.12001
offset_right = 10.424
offset_bottom = -4.19202
grow_horizontal = 2
theme = SubResource("Theme_fv18x")

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 530.0
offset_top = 227.0
offset_right = 620.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_u2g2u")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = 213.0
offset_right = 297.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Level"
horizontal_alignment = 1

[node name="Load" type="Sprite2D" parent="."]
position = Vector2(588, 458)
scale = Vector2(3.00625, 1.98889)
texture = ExtResource("5_fsgrf")

[node name="Level" type="HSlider" parent="."]
layout_mode = 2
offset_left = 363.0
offset_top = 400.0
offset_right = 814.0
offset_bottom = 504.0
theme_override_icons/grabber = ExtResource("5_2go0f")
theme_override_icons/grabber_highlight = ExtResource("5_2go0f")
theme_override_icons/grabber_disabled = ExtResource("5_2go0f")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_k1iue")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_k1iue")
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1j4rt")
autoplay = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="drag_ended" from="Level" to="." method="_on_level_drag_ended"]
[connection signal="value_changed" from="Level" to="." method="_on_level_value_changed"]
